@@ -1,22 +1,22 @@
-3707ebc3f85b63aa93b04ff50fe9f024 *DESCRIPTION
+93a5d3d3426192358a8946c2da74855e *DESCRIPTION
 a8c1eef6c6fb79bfd96b72ac1e74b587 *NAMESPACE
-b6bb0a025df5ca6945c3d6ede921ccca *NEWS
+bbbcd847e4d106ef43e31f83381579c7 *NEWS
 7de320006a76456e367658beade0ca08 *R/VSURF.R
 ef5446025352dd67c484bf8738d0e782 *R/VSURF.default.R
-309dace2759d0794593e2f3794b74480 *R/VSURF.formula.R
+ab60c5b74065092a5060eed29687acdc *R/VSURF.formula.R
 6feb868ce76feec04b3bcd364b42eda9 *R/VSURF.interp.R
 197e60ef83419ce8c81123b240f0cbcd *R/VSURF.interp.default.R
-8ca5d7bdb947392dea026dca25314bf2 *R/VSURF.interp.formula.R
+71cb2cb0345e66e201023af4b29ad24a *R/VSURF.interp.formula.R
 9b4e7a34c8090960956c365b00be2ff6 *R/VSURF.pred.R
 608169ea5ec8b82729b8b39a112869ee *R/VSURF.pred.default.R
-462a0fa15a5606e0fa5059fb7499389e *R/VSURF.pred.formula.R
+8e4210e4354efdec1bffc04f62abf342 *R/VSURF.pred.formula.R
 6488dcc7674971921d3f9c2040f4ff2b *R/VSURF.thres.R
 bca22af7ee46f98d77b62fb3d5066d15 *R/VSURF.thres.default.R
-57a70ffe7730c166e71b67b508c7bece *R/VSURF.thres.formula.R
-c1f98681e3329e5169e88591d50045f3 *R/plot.VSURF.R
-5499924695c7dab04a23b65a8f551187 *R/plot.VSURF.interp.R
-c4c5ecec502c2915a10d1564a33fbf1c *R/plot.VSURF.pred.R
-ffeb8f66350fc7ff96b56ed4f273364b *R/plot.VSURF.thres.R
+e8d5596360a512afab593f46dd9d2718 *R/VSURF.thres.formula.R
+ca152e62369b01653bc9ff2baa9d6a0f *R/plot.VSURF.R
+a9206107eee85b82d91704e6a57b7951 *R/plot.VSURF.interp.R
+f6169c576b67c42c6ccc99405c358b7f *R/plot.VSURF.pred.R
+b6e99bff95c8ad5ecfb140e973485bdd *R/plot.VSURF.thres.R
 82f6a636fe22cd59fded32906d1f832b *R/summary.VSURF.R
 0ce11b3a3964be75b1e25d7a259761de *R/tune.R
 6eb5f22b9845d022e43d354afb60706e *R/tune.VSURF.interp.R
@@ -26,7 +26,7 @@ ffeb8f66350fc7ff96b56ed4f273364b *R/plot.VSURF.thres.R
 4b1058d6084b06845142178e63a9bfe1 *man/VSURF.interp.Rd
 549a2f4b454e3a7f1f78b26d4ff0840f *man/VSURF.pred.Rd
 53c29e2dd1bf9602eb87f6c6dd45d4ae *man/VSURF.thres.Rd
-3097b00b942c79b820f9c4ce88336fd7 *man/plot.VSURF.Rd
+10e308332697759a8fbf24658b3b3dae *man/plot.VSURF.Rd
 32b0ab11651681490947cd0297c575f9 *man/summary.VSURF.Rd
 304310d5f4a342c1a87ba86ca2132a0f *man/toys.Rd
 f2368f678a3ae846a2d0b928e2b8a2a3 *man/tune.Rd
